[workspace]
resolver = "2"

[package]
authors = ["swrge"]
edition = "2021"
include = ["/src"]
license = "MIT"
rust-version = "1.84.0"
categories = ["api-bindings", "asynchronous", "web-programming::websocket"]
description = "Discord Gateway implementation for the Twilight ecosystem."
homepage = "https://twilight.rs/chapter_1_crates/section_3_gateway.html"
keywords = ["discord", "discord-api", "twilight"]
name = "randy-gateway"
repository = "https://github.com/swrge/randy-gateway"
version = "0.1.0"

[dependencies]
bitflags = { default-features = false, version = "2" }
fastrand = { default-features = false, features = ["std"], version = "2" }
futures-core = { default-features = false, features = ["std"], version = "0.3" }
futures-sink = { default-features = false, features = ["std"], version = "0.3" }
serde = { default-features = false, features = ["derive"], version = "1" }
serde_json = { default-features = false, features = ["std"], version = "1" }
tokio = { default-features = false, features = ["net", "rt", "sync", "time"], version = "1.19" }
tokio-websockets = { default-features = false, features = ["client", "fastrand", "sha1_smol", "simd"], version = "0.11" }
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }
twilight-gateway-queue = { default-features = false, version = "0.16.0-rc.1" }
twilight-model = { default-features = false, git = "https://github.com/swrge/randy-model", version = "0.1.0" }

# Optional
# The default backend for flate2; miniz-oxide, works differently
# from the C-backed backend zlib, When you give it the sync argument
# it does not seem to update the total_in of the function to have an offset
# https://github.com/alexcrichton/flate2-rs/issues/217
flate2 = { default-features = false, optional = true, version = "1.0.24" }
twilight-http = { default-features = false, optional = true, git = "https://github.com/swrge/randy-rest", version = "0.1.0", package = "randy-rest" }
simd-json = { default-features = false, features = ["serde_impl", "swar-number-parsing"], optional = true, version = "0.14.0-rc.3" }

[dev-dependencies]
anyhow = { default-features = false, features = ["std"], version = "1" }
serde_test = { default-features = false, version = "1.0.136" }
static_assertions = { default-features = false, version = "1" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread", "test-util"], version = "1.12" }
tokio-stream = { default-features = false, version = "0.1" }
tracing-subscriber = { default-features = false, features = ["fmt", "tracing-log"], version = "0.3" }

[features]
default = ["rustls-platform-verifier", "rustls-ring", "twilight-http", "zlib-stock"]
native-tls = ["tokio-websockets/native-tls", "tokio-websockets/openssl"]
rustls-platform-verifier = ["tokio-websockets/rustls-platform-verifier"]
rustls-native-roots = ["tokio-websockets/rustls-native-roots"]
rustls-webpki-roots = ["tokio-websockets/rustls-webpki-roots"]
rustls-ring = ["tokio-websockets/ring"]
rustls-aws_lc_rs = ["tokio-websockets/aws_lc_rs"]
rustls-aws-lc-rs = ["rustls-aws_lc_rs"] # Alias for convenience, underscores are preferred in the rustls stack
zlib-simd = ["dep:flate2", "flate2?/zlib-ng"]
zlib-stock = ["dep:flate2", "flate2?/zlib"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
